# T5_pretrain

./: .gitignore  .pre-commit-config.yaml  README.md  bookcorpus.py  dragon.py  dragon_gemma.py  dragon_gemma_ft.py  dragon_joint.py  dragon_llama.py  dragon_modified.py  dragon_orig.py  dragon_orig_ft.py  llama_lora.loading_info  preprocess.py  pyproject.toml
modeling/: modeling_dragon.py  modeling_dragon_T5.py  modeling_dragon_gemma.py  modeling_dragon_joint.py  modeling_dragon_llama.py
preprocess_utils/: convert_csqa.py  graph.py  graph_with_LM_T5.py  grounding.py
scripts/: T5_run_eval__csqa.sh  T5_run_pretrain.sh  T5_run_train__bookcorpus.sh  T5_run_train__csqa.sh  run_pretrain.sh  run_pretrain_gemma.sh  run_pretrain_llama.sh  run_train__joint.sh
utils/: .data_utils.py.swp  data_utils.py  data_utils_gemma_exp.py  data_utils_gemma_exp_ft.py  data_utils_llama.py  data_utils_orig.py  data_utils_orig_ft.py  layers.py  parser_utils.py
