[project]
name = "t5-pretrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.14.1",
    "torch-geometric==2.6.1",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers==4.44.2",
    "wandb>=0.18.5",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.1",
]


[tool.ruff]
extend-include = ["*.ipynb"]
fix = true
unsafe-fixes = true
preview = true
output-format = "grouped"

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "B", "I", "TID"]
ignore = ["E501", "F722"]
unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
plugins = ["numpy.typing.mypy_plugin"]
